# master_thesis

./: .gitignore  Cargo.toml  README.md
results/: 3regular_output.txt  approx_graphs.py  complete_output.txt  exact_graph.py  new_exact_complete_output.txt  new_exact_regular_output.txt  new_exact_regular_output2.txt  pareto_output.txt
src/: cacti.rs  facial_walks.rs  graphs.rs  lib.rs  lr_coloring.rs  match_merge.rs  mps_alg.rs  new_planarity.rs  planarity.rs  poranen.rs  pq_tree.rs  rand_graphs.rs  schnyder.rs  triangle_listing.rs  union_find.rs
src/tests/: cacti.rs  facial_walks.rs  graphs.rs  input_generation.rs  lr_coloring.rs  match_merge.rs  mod.rs  planarity.rs  poranen.rs  rand_graphs.rs  schnyder.rs  triangle_listing.rs
