[package]
name = "mps_analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.2"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
itertools = "0.12.1"