[package]
name = "mps_analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.2"
itertools = "0.12.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
good_lp = { version = "1.8.1", features = ["highs"], default-features = false}
rustworkx-core = "0.14.2"
hashbrown = "0.11.2"